Initialize P010 ImageReader during preview to allow diagnostic dumps while not actively recording